fixed card.img not scaling properly. image may not be focused but removed distorted feel to the cards

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -172,3 +172,7 @@ body {
 //   display: flex;
 //   justify-content: center;
 // }
+
+.card-img {
+  object-fit: cover;
+}
